markdown/security/6.5.2/migration-7/configuration.md
---
title: "Configuration Migrations"
source: "ROOT:migration-7/configuration.adoc"
---

# Configuration Migrations

The following steps relate to changes around how to configure `HttpSecurity`, `WebSecurity` and related components.

<a id="_use_the_lambda_dsl"></a>

## Use the Lambda DSL

The Lambda DSL is present in Spring Security since version 5.2, and it allows HTTP security to be configured using lambdas.

You may have seen this style of configuration in the Spring Security documentation or samples.
Let us take a look at how a lambda configuration of HTTP security compares to the previous configuration style.

#### Configuration using lambdas

```java
@Configuration
@EnableWebSecurity
public class SecurityConfig {

    @Bean
    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
        http
            .authorizeHttpRequests(authorize -> authorize
                .requestMatchers("/blog/**").permitAll()
                .anyRequest().authenticated()
            )
            .formLogin(formLogin -> formLogin
                .loginPage("/login")
                .permitAll()
            )
            .rememberMe(Customizer.withDefaults());

        return http.build();
    }
}
```

#### Equivalent configuration without using lambdas

```java
@Configuration
@EnableWebSecurity
public class SecurityConfig {

    @Bean
    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
        http
            .authorizeHttpRequests()
                .requestMatchers("/blog/**").permitAll()
                .anyRequest().authenticated()
                .and()
            .formLogin()
                .loginPage("/login")
                .permitAll()
                .and()
            .rememberMe();

        return http.build();
    }
}
```

The Lambda DSL is the preferred way to configure Spring Security, the prior configuration style will not be valid in Spring Security 7 where the usage of the Lambda DSL will be required.
This has been done mainly for a couple of reasons:

- The previous way it was not clear what object was getting configured without knowing what the return type was.
The deeper the nesting the more confusing it became.
Even experienced users would think that their configuration was doing one thing when in fact, it was doing something else.
- Consistency.
Many code bases switched between the two styles which caused inconsistencies that made understanding the configuration difficult and often led to misconfigurations.

<a id="_lambda_dsl_configuration_tips"></a>

### Lambda DSL Configuration Tips

When comparing the two samples above, you will notice some key differences:

- In the Lambda DSL there is no need to chain configuration options using the `.and()` method.
The `HttpSecurity` instance is automatically returned for further configuration after the call to the lambda method.
- `Customizer.withDefaults()` enables a security feature using the defaults provided by Spring Security.
This is a shortcut for the lambda expression `it → {}`.

<a id="_webflux_security"></a>

### WebFlux Security

You may also configure WebFlux security using lambdas in a similar manner.
Below is an example configuration using lambdas.

#### WebFlux configuration using lambdas

```java
@Configuration
@EnableWebFluxSecurity
public class SecurityConfig {

    @Bean
    public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http) {
        http
            .authorizeExchange(exchanges -> exchanges
                .pathMatchers("/blog/**").permitAll()
                .anyExchange().authenticated()
            )
            .httpBasic(Customizer.withDefaults())
            .formLogin(formLogin -> formLogin
                .loginPage("/login")
            );

        return http.build();
    }

}
```

<a id="_goals_of_the_lambda_dsl"></a>

### Goals of the Lambda DSL

The Lambda DSL was created to accomplish to following goals:

- Automatic indentation makes the configuration more readable.
- There is no need to chain configuration options using `.and()`
- The Spring Security DSL has a similar configuration style to other Spring DSLs such as Spring Integration and Spring Cloud Gateway.

<a id="_use_with_instead_of_apply_for_custom_dsls"></a>

## Use `.with()` instead of `.apply()` for Custom DSLs

In versions prior to 6.2, if you had a [custom DSL](../servlet/configuration/java.md#jc-custom-dsls), you would apply it to the `HttpSecurity` using the `HttpSecurity#apply(…​)` method.
However, starting from version 6.2, this method is deprecated and will be removed in 7.0 because it will no longer be possible to chain configurations using `.and()` once `.and()` is removed (see [github.com/spring-projects/spring-security/issues/13067](https://github.com/spring-projects/spring-security/issues/13067)).
Instead, it is recommended to use the new `.with(…​)` method.
For more information about how to use `.with(…​)` please refer to the [Custom DSLs section](../servlet/configuration/java.md#jc-custom-dsls).

<a id="_use_dispatchertypematchers_instead_of_shouldfilteralldispatchertypes"></a>

## Use `dispatcherTypeMatchers` instead of `shouldFilterAllDispatcherTypes`

If you are permitting the ERROR dispatch, you may be using `shouldFilterAllDispatcherTypes(false)` in the `auhorizeHttpRequests` DSL:

#### Java

```java
http
    .authorizeHttpRequests((authorize) -> authorize
        .shouldFilterAllDispatcherTypes(false)
        // ...
    )
```

#### Kotlin

```kotlin
http {
    authorizeHttpRequests {
        shouldFilterAllDispatcherTypes = false
        // ...
    }
}
```

In preparation for 7, change this to use `dispatcherTypeMatchers`:

#### Java

```java
http
    .authorizHttpRequests((authorize) -> authorize
        .dispatcherTypeMatchers(DispatcherType.ERROR).permitAll()
        // ...
    )
```

#### Kotlin

```kotlin
http {
    authorizeHttpRequests {
        authorize(new DispatcherTypeRequestMatcher(DispatcherType.ERROR), permitAll())
    }
}
```
